chore: fix flappy bird installation

--- a/src/components/game/GameHeader.css
+++ b/src/components/game/GameHeader.css
@@ -34,6 +34,10 @@
     animation: flicker 200ms;
 }
 
+.score-flicker {
+    animation: flicker 200ms;
+}
+
 @keyframes flicker {
     0%, 100% {
         opacity: 1;
