--- a/src/components/flappybird/FlappyBirdGame.css
+++ b/src/components/flappybird/FlappyBirdGame.css
@@ -25,3 +25,13 @@
   }
 }
 
+.blink_me {
+  animation: blinker 200ms linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
